--- a/package.json
+++ b/package.json
@@ -8,8 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "gray-matter": "^4.0.2",
+    "immer": "^8.0.1",
+    "isomorphic-fetch": "^3.0.0",
     "next": "^10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-bootstrap": "^1.5.1",
+    "react-dom": "17.0.1",
+    "react-number-format": "^4.4.4",
+    "react-redux": "^7.2.2",
+    "react-table": "^7.6.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
+    "use-immer": "^0.4.2"
   }
 }
