--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
     "gray-matter": "^4.0.2",
     "immer": "^8.0.1",
     "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "^10.0.0",
+    "next-cookies": "^2.0.3",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "17.0.1",
